res/values: adds revised `strings_gn.arb` file

--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -43,14 +43,14 @@
   "already_have_account": "Reguerekóma  peteĩ cuenta?",
   "always": "katuete",
   "amount": "Mboypa",
-  "amount_is_below_minimum_limit": "Nde saldo, pe cuota rire, saʼivéta pe monto michĩmi oñeikotevẽva-gui ojejapo hag̃ua pe ñembohasa.",
+  "amount_is_below_minimum_limit": "Nde saldo, pe cuota rire, saʼivéta pe monto michĩmi oñeikotevẽva-gui ojejapo hag̃ua pe ñembohasa. (${min})",
   "amount_is_estimate": "Pe viru ojejapyhyva ha’e peteî jehecha ñemomba’e.",
   "amount_is_guaranteed": "Oñembojerovia pe monto ojejapyhyva",
   "and": "Ha",
   "anonpay_description": "Ojapo ${type}. Pe ojapyhytava ikatu ${method} oipurukuaa oimeraẽva criptomoneda oipytyvõva, ha ojejapyhyta viru ko billetera-pe.",
   "apk_update": "APK ñembopyahu",
   "approve": "Ñemoneĩ",
-  "arrive_in_this_address": "Og̃uahẽta ko dirección-pe",
+  "arrive_in_this_address": "${currency} ${tag} Og̃uahẽta ko dirección-pe",
   "ascending": "yvateve",
   "ask_each_time": "Eporandu opa jave",
   "auth_store_ban_timeout": "Ñembotoveva ha aravo ñeha'ãro",
@@ -80,7 +80,7 @@
   "bitcoin_light_theme": "Tema jehesape Bitcoin rehegua",
   "bitcoin_payments_require_1_confirmation": "Ojeiporu hag̃ua Bitcoin hepyme’ẽrã, oikotevẽ peteĩ ñemoneĩ, ikatúva hi’are 20 aravo’i térã hetave. Aguyje nde py’aguapýre. Oñemondota ndéve peteĩ marandu correo rupive hepyme’ẽ oñemoneĩ vove.",
   "block_remaining": "Hembý peteĩ bloqueo",
-  "Blocks_remaining": "Bloque hembýva",
+  "Blocks_remaining": "${status} Bloque hembýva",
   "bluetooth": "Bluetooth",
   "bright_theme": "Omimbiva",
   "bump_fee": "Mba’erepy",
@@ -111,11 +111,11 @@
   "change": "Oñemoambue",
   "change_backup_password_alert": "Nde marandu ñongatupyre ymaveguare ndorekomo’ãi jeike ñembohasa hag̃ua ñe’ẽñemi ñongatu pyahu reheve. Pe ñe’ẽñemi pyahu ojepurúta añoite ñongatupyre pyahu rehevente. Añetehápepa remoambuese pe ñe’ẽñemi ñongatupyre rehegua?",
   "change_currency": "Emoambué moneda",
-  "change_current_node": "Emoambue nodo ko’áĝagua",
+  "change_current_node": "Emoambue nodo ko’áĝagua ${node}",
   "change_current_node_title": "Emoambué nodo ko’áĝagua",
   "change_exchange_provider": "Emoambué ñemuha me'éjovai",
   "change_language": "Emoambue ñe’ẽ",
-  "change_language_to": "Emoambue ñe’ẽ pe",
+  "change_language_to": "Emoambue ñe’ẽ pe ${language}",
   "change_password": "Emoambue ñe’ẽñemi",
   "change_rep": "Omyakãva pe ñembohasa",
   "change_rep_message": "¿Reime añetehapepa remoambuéseha umi tembiapo omotenondeva?",
@@ -136,7 +136,7 @@
   "coin_control": "Rehecha moneda (poravokuaá)",
   "cold_or_recover_wallet": "Emoĩ peteĩ billetera ro'ysã térã reguereko jey peteĩ billetera kuatiapegua",
   "color_theme": "Mba'e sa'y kuera",
-  "commit_transaction_amount_fee": "Ñemoneĩ ñembohasa mba'erepy mboyva rehegua",
+  "commit_transaction_amount_fee": "Ñemoneĩ ñembohasa mba'erepy mboyva: ${amount}, rehegua: ${fee}",
   "confirm": "Emoñete",
   "confirm_delete_template": "Ko jejapo omboguepáta ko plantilla. ¿Rehasatapa?",
   "confirm_delete_wallet": "Ko jajapo omboguepáta ko billetera. ¿Rehasatapa?",
@@ -215,7 +215,7 @@
   "disableBatteryOptimization": "Embogue batería ñemoporãha",
   "disableBatteryOptimizationDescription": "¿Remboguésepa batería ñemoporãha ikatu hag̃ua pe ñembojoaju tapykuepeguá oiko porãve ha jejopy’ỹre?",
   "disabled": "Ñembogue",
-  "discount": "Ñongatu",
+  "discount": "Ñongatu ${value}%",
   "display_settings": "Jehechaha ñemohenda",
   "displayable": "Ojehechaukuaáva",
   "do_not_have_enough_gas_asset": "Ndoguerekoi hetakue ${currency} ikatu ojejapo peteĩ ñembohasa umi teko ko'angagua ndive red blockchain rehegua. Oikotevẽve(viru ñemoambue) hepyme'ẽ hag̃ua mba'erepy red blokchain rehegua, jepe rahaukavo peteĩ activo",
@@ -292,7 +292,7 @@
   "export_backup": "Mboguata ñangareko joja rehegua",
   "extra_id": "ID joapy:",
   "extracted_address_content": "Ombohasa viru ${recipient_name}-pe.",
-  "failed_authentication": "Ñembojoaju jejavy.",
+  "failed_authentication": "Ñembojoaju jejavy. ${state_error}",
   "faq": "Porandu ojejapóva jepi.",
   "features": "Mba'erechaukaha",
   "fetching": "Ojejapo hina",
@@ -343,7 +343,7 @@
   "incorrect_seed": "pe jehaipyre oñemoiva ndoikói",
   "inputs": "jeikéha",
   "insufficient_lamport_for_tx": "Ndoguerekói heta SOL ojapo hag̃ua pe transacción ha avei pe mba'erepy ñemondo hag̃ua. Ikatu remoĩve SOL nde billetera-pe térã remomichĩve pe SOL remondoséva",
-  "insufficient_lamports": "Ndoguerekói heta SOL ojapo hag̃ua pe transacción ha avei pe mba'erepy ñemondo hag̃ua. Reikotevẽ peteĩ michĩmi $${solValueNeeded} SOL rehe. Remoive SOL nde billetera-pe térã emomichĩve pe monto remondoséva.",
+  "insufficient_lamports": "Ndoguerekói heta SOL ojapo hag̃ua pe transacción ha avei pe mba'erepy ñemondo hag̃ua. Reikotevẽ peteĩ michĩmi ${solValueNeeded} SOL rehe. Remoive SOL nde billetera-pe térã emomichĩve pe monto remondoséva.",
   "insufficientFundsForRentError": "Ndoguerekói heta SOL jehepymeʼẽ hag̃ua pe transacción ha ñemeʼẽ hag̃ua mbaʼerepy  cuenta-pe. Ikatu remoĩve SOL nde billetera-pe térã remomichĩve pe SOL remondoséva.",
   "introducing_cake_pay": "Roikuaauka hepyme’ẽ Cake Pay!",
   "invalid_input": "Jeikeha ndoikoi",
@@ -379,7 +379,7 @@
   "methods": "Mbaʼeichapa",
   "min_amount": "Saʼive: ${value}",
   "min_value": "Saʼive: ${value} ${currency}",
-  "minutes_to_pin_code": "Aravoʼi",
+  "minutes_to_pin_code": "${minute} Aravoʼi",
   "mm": "mm",
   "modify_2fa": "Ñemoambue mbujapeheʼẽ 2FA",
   "monero_com": "Monero.com ha Cake Wallet rupi",
@@ -453,7 +453,7 @@
   "payment_id": "ID hepyme’ẽ rehegua:",
   "payment_was_received": "Nde hepyme’ẽ ojejapyhyma",
   "pending": "Ñehaʼãrõme",
-  "percentageOf": "Mboypa",
+  "percentageOf": "Mboypa ${amount}",
   "personalizado": "Ojeiporavokuaava",
   "pin_at_top": "Pin ${token} yvate gotyo",
   "pin_is_incorrect": "PIN ndahaʼéi",
@@ -609,7 +609,7 @@
   "sell_alert_content": "Ko’angaite ramo roipytyvõ Bitcoin, Ethereum ha Litecoin ñemúpe añoite. Emoheñói térã emoambue nde billetera Bitcoin, Ethereum térã Litecoin-pe.",
   "sell_monero_com_alert_content": "Ne’ĩragueteri ojeheja Monero ñemu.",
   "send": "Emondo",
-  "send_address": "pe dirección (criptomoneda) rehegua",
+  "send_address": "pe dirección ${cryptoCurrency} rehegua",
   "send_amount": "Mboy:",
   "send_creating_transaction": "Jejapo hepyme'ẽ ñembohasa",
   "send_error_currency": "Pe moneda ikatu oguereko papapy añoite.",
@@ -621,7 +621,7 @@
   "send_payment_id": "ID Jehepyme’ẽ (ojeiporavokuaava)",
   "send_priority": "Ko’ánga oñemohenda tarifa ${transactionPriority}. Pe ñembohasa ñemotenonde ikatu oñemohenda configuración-pe.",
   "send_sending": "",
-  "send_success": "Oñemondo hína...",
+  "send_success": "Oñemondo ${crypto} hína...",
   "send_templates": "Plantilla-kuéra",
   "send_title": "Emondo",
   "send_to_this_address": "Emondo ${currency} ${tag} ko dirección-pe",
@@ -714,7 +714,7 @@
   "sync_status_connecting": "Oñembojoajuhína",
   "sync_status_failed_connect": "Ndojoajui",
   "sync_status_not_connected": "Ndaipóri joaju-pe",
-  "sync_status_starting_scan": "Escaneo ñepyrurã",
+  "sync_status_starting_scan": "Escaneo ñepyrurã ${height}",
   "sync_status_starting_sync": "Oñepyrũ ñembojoaju",
   "sync_status_syncronized": "Ojoajuma",
   "sync_status_syncronizing": "Oñembojoajuhína",
@@ -729,7 +729,7 @@
   "third_intro_title": "Yat ojapo porã hembiapo ambue ndive.",
   "thorchain_contract_address_not_supported": "Thorchain ndohejái oñemondo hag̃ua peteî dirección contrato-pe.",
   "thorchain_taproot_address_not_supported": "Pe Thorchain ñeme’ẽha ndoipytyvõi umi dirección Taproot-pe. Emoambue dirección térã eiporavo peteî ñeme’ẽha pyahu iñambueva.",
-  "time": "Aravo",
+  "time": "${minutes}m ${seconds}s",
   "tip": "Ñemoñe’ẽ",
   "today": "Ko árape",
   "token_contract_address": "Pe dirección contrato token rehegua",
@@ -748,7 +748,7 @@
   "totp_secret_code": "Papapy ñemi TOTP",
   "totp_verification_success": "¡Jehecha jey osẽ porãite!",
   "track": "techaukaha",
-  "trade_details_copied": "Ojekopia portapapel-pe",
+  "trade_details_copied": "${title} Ojekopia portapapel-pe",
   "trade_details_created_at": "Heñói pe",
   "trade_details_fetching": "ohasa hina",
   "trade_details_id": "ID jeikuaaha",
@@ -837,7 +837,7 @@
   "verification": "Ehecha jey",
   "verify_message": "Marandu jehechajey rehegua",
   "verify_with_2fa": "Jehechajey Cake 2FA-rupive",
-  "version": "Ñemoambue ko’ágagua",
+  "version": "Ñemoambue ko’ágagua ${currentVersion}",
   "view_all": "Jehechapaite",
   "view_in_block_explorer": "Jehecha bloque hekaha-pe",
   "view_key_private": "Jehecha papapy ñemi (Ñemi)",
