res/values: adds revised `strings_gn.arb` file

--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -779,7 +779,7 @@
   "trade_state_unpaid": "Ndojehepyme’ẽi",
   "trades": "Ñemoambue",
   "transaction_details_amount": "Mboypa",
-  "transaction_details_copied": "Ojekopia portapapel-pe",
+  "transaction_details_copied": "${title} Ojekopia portapapel-pe",
   "transaction_details_date": "Ára",
   "transaction_details_fee": "cuota",
   "transaction_details_height": "yvate",
