--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -96,6 +96,8 @@
   "biometric_auth_reason": "Kimlik doğrulaması için parmak izini okutun",
   "bitcoin_dark_theme": "Bitcoin Karanlık Teması",
   "bitcoin_light_theme": "Bitcoin Hafif Tema",
+  "bitcoin_lightning_deposit": "Mevduat",
+  "bitcoin_lightning_withdraw": "Geri çekilmek",
   "bitcoin_payments_require_1_confirmation": "Bitcoin ödemeleri, 20 dakika veya daha uzun sürebilen 1 onay gerektirir. Sabrınız için teşekkürler! Ödeme onaylandığında e-posta ile bilgilendirileceksiniz.",
   "block_height": "Blok yüksekliği",
   "block_remaining": "Kalan 1 blok",
