--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -94,6 +94,8 @@
   "biometric_auth_reason": "인증하려면 지문을 스캔하세요",
   "bitcoin_dark_theme": "비트코인 다크 테마",
   "bitcoin_light_theme": "비트코인 라이트 테마",
+  "bitcoin_lightning_deposit": "보증금",
+  "bitcoin_lightning_withdraw": "철회하다",
   "bitcoin_payments_require_1_confirmation": "비트코인 결제는 1번의 확인이 필요하며, 이는 20분 이상 소요될 수 있습니다. 기다려 주셔서 감사합니다! 결제가 확인되면 이메일로 알려드립니다.",
   "block_height": "블록 높이",
   "block_remaining": "1 블록 남음",
