localize action names

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -60,6 +60,7 @@
   "approve": "ﺪﻤﺘﻌﻳ",
   "approve_request": "الموافقة على الطلب",
   "approve_tokens": "الموافقة على الرموز",
+  "apps": "تطبيقات",
   "arbiscan_history": "تاريخ أربيسكان",
   "arrive_in_this_address": "سيصل ${currency} ${tag}إلى هذا العنوان",
   "ascending": "تصاعدي",
@@ -438,6 +439,8 @@
   "hide": "يخفي",
   "hide_details": "أخف التفاصيل",
   "high_contrast_theme": "موضوع عالي التباين",
+  "history": "تاريخ",
+  "home": "بيت",
   "home_screen_settings": "إعدادات الشاشة الرئيسية",
   "how_to_connect": "كيفية الاتصال",
   "how_to_use": "                                                                    ﻞﻤﻌﺘﺴﺗ ﻒﻴﻛ",
