--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -60,6 +60,7 @@
   "approve": "Schvalovat",
   "approve_request": "Schválit žádost",
   "approve_tokens": "Schválit tokeny",
+  "apps": "Aplikace",
   "arbiscan_history": "Arbiscan History",
   "arrive_in_this_address": "${currency} ${tag}přijde na tuto adresu",
   "ascending": "Vzestupné",
@@ -438,6 +439,8 @@
   "hide": "Skrýt",
   "hide_details": "Skrýt detaily",
   "high_contrast_theme": "Téma s vysokým kontrastem",
+  "history": "Dějiny",
+  "home": "Domov",
   "home_screen_settings": "Nastavení domovské obrazovky",
   "how_to_connect": "Jak se připojit",
   "how_to_use": "Jak používat",
