--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -60,6 +60,7 @@
   "approve": "Genehmigen",
   "approve_request": "Anfrage genehmigen",
   "approve_tokens": "Token genehmigen",
+  "apps": "Apps",
   "arbiscan_history": "ArbiScan-Geschichte",
   "arrive_in_this_address": "${currency} ${tag} wird an dieser Adresse ankommen",
   "ascending": "Aufsteigend",
@@ -438,6 +439,8 @@
   "hide": "Verstecken",
   "hide_details": "Details ausblenden",
   "high_contrast_theme": "Kontrastreiches Thema",
+  "history": "Geschichte",
+  "home": "Heim",
   "home_screen_settings": "Einstellungen für den Startbildschirm",
   "how_to_connect": "Anleitung",
   "how_to_use": "Wie benutzt man",
