--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -60,6 +60,7 @@
   "approve": "Approve",
   "approve_request": "Approve Request",
   "approve_tokens": "Approve tokens",
+  "apps": "Apps",
   "arbiscan_history": "ArbiScan History",
   "arrive_in_this_address": "${currency} ${tag}will arrive in this address",
   "ascending": "Ascending",
@@ -438,6 +439,8 @@
   "hide": "Hide",
   "hide_details": "Hide Details",
   "high_contrast_theme": "High Contrast Theme",
+  "history": "History",
+  "home": "Home",
   "home_screen_settings": "Home screen settings",
   "how_to_connect": "How to Connect",
   "how_to_use": "How to use",
