--- a/res/values/strings_gn.arb
+++ b/res/values/strings_gn.arb
@@ -50,6 +50,7 @@
   "anonpay_description": "Ojapo ${type}. Pe ojapyhytava ikatu ${method} oipurukuaa oimeraẽva criptomoneda oipytyvõva, ha ojejapyhyta viru ko billetera-pe.",
   "apk_update": "APK ñembopyahu",
   "approve": "Ñemoneĩ",
+  "apps": "Apps rehegua .",
   "arrive_in_this_address": "${currency} ${tag} Og̃uahẽta ko dirección-pe",
   "ascending": "yvateve",
   "ask_each_time": "Eporandu opa jave",
@@ -331,6 +332,8 @@
   "hidden_balance": "Mba’erepy ñemi",
   "hide_details": "mba’e peteíteî ñemokañy",
   "high_contrast_theme": "Mba’e hesakangue yvateva",
+  "history": "Tembiasakue",
+  "home": "Óga",
   "home_screen_settings": "Ñemohenda pe jehechaha ñepyrũme",
   "how_to_use": "Mba’éichapa ojeIpuru",
   "how_to_use_card": "Mba’éichapa ojeiporu ko karjeta",
