--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -60,6 +60,7 @@
   "approve": "मंज़ूरी देना",
   "approve_request": "अनुरोध को स्वीकृत करें",
   "approve_tokens": "टोकन को मंजूरी देना",
+  "apps": "ऐप्स",
   "arbiscan_history": "अरबीस्कैन इतिहास",
   "arrive_in_this_address": "${currency} ${tag}इस पते पर पहुंचेंगे",
   "ascending": "आरोही",
@@ -438,6 +439,8 @@
   "hide": "छिपाना",
   "hide_details": "विवरण छुपाएं",
   "high_contrast_theme": "उच्च कंट्रास्ट थीम",
+  "history": "इतिहास",
+  "home": "घर",
   "home_screen_settings": "होम स्क्रीन सेटिंग्स",
   "how_to_connect": "कनेक्ट कैसे करें",
   "how_to_use": "का उपयोग कैसे करें",
