--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -60,6 +60,7 @@
   "approve": "Menyetujui",
   "approve_request": "Menyetujui permintaan",
   "approve_tokens": "Menyetujui token",
+  "apps": "Aplikasi",
   "arbiscan_history": "Sejarah ArbiScan",
   "arrive_in_this_address": "${currency} ${tag} akan tiba di alamat ini",
   "ascending": "Naik",
@@ -438,6 +439,8 @@
   "hide": "Bersembunyi",
   "hide_details": "Sembunyikan Rincian",
   "high_contrast_theme": "Tema Kontras Tinggi",
+  "history": "Sejarah",
+  "home": "Rumah",
   "home_screen_settings": "Pengaturan layar awal",
   "how_to_connect": "Cara terhubung",
   "how_to_use": "Cara Penggunaan",
