--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -60,6 +60,7 @@
   "approve": "承認する",
   "approve_request": "リクエストを承認します",
   "approve_tokens": "トークンを承認します",
+  "apps": "アプリ",
   "arbiscan_history": "ArbiScan の歴史",
   "arrive_in_this_address": "${currency} ${tag}はこの住所に到着します",
   "ascending": "上昇",
@@ -439,6 +440,8 @@
   "hide": "隠れる",
   "hide_details": "詳細を非表示",
   "high_contrast_theme": "ハイコントラストテーマ",
+  "history": "歴史",
+  "home": "家",
   "home_screen_settings": "ホーム画面の設定",
   "how_to_connect": "接続方法",
   "how_to_use": "使い方",
