--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -60,6 +60,7 @@
   "approve": "Zatwierdzić",
   "approve_request": "Zatwierdzić żądanie",
   "approve_tokens": "Zatwierdzić tokeny",
+  "apps": "Aplikacje",
   "arbiscan_history": "Historia ArbiScanu",
   "arrive_in_this_address": "${currency} ${tag}dotrze na ten adres",
   "ascending": "Wznoszący się",
@@ -438,6 +439,8 @@
   "hide": "Ukryj",
   "hide_details": "Ukryj szczegóły",
   "high_contrast_theme": "Motyw wysokiego kontrastu",
+  "history": "Historia",
+  "home": "Dom",
   "home_screen_settings": "Ustawienia ekranu głównego",
   "how_to_connect": "Jak połączyć się",
   "how_to_use": "Jak korzystać",
