--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -60,6 +60,7 @@
   "approve": "Утвердить",
   "approve_request": "Утвердить запрос",
   "approve_tokens": "Одобрить токены",
+  "apps": "Приложения",
   "arbiscan_history": "История АрбиСкан",
   "arrive_in_this_address": "${currency} ${tag}придет на этот адрес",
   "ascending": "Восходящий",
@@ -438,6 +439,8 @@
   "hide": "Скрывать",
   "hide_details": "Скрыть детали",
   "high_contrast_theme": "Высококонтрастная тема",
+  "history": "История",
+  "home": "Дом",
   "home_screen_settings": "Настройки главного экрана",
   "how_to_connect": "Как подключиться",
   "how_to_use": "Как использовать",
