--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -60,6 +60,7 @@
   "approve": "Aprubahan",
   "approve_request": "Aprubahan ang kahilingan",
   "approve_tokens": "Aprubahan ang mga token",
+  "apps": "Apps",
   "arbiscan_history": "Kasaysayan ng Arbiscan",
   "arrive_in_this_address": "Ang ${currency} ${tag} ay darating sa address na ito",
   "ascending": "Umakyat",
@@ -438,6 +439,8 @@
   "hide": "Itago",
   "hide_details": "Itago ang mga detalye",
   "high_contrast_theme": "High Contrast Theme",
+  "history": "Kasaysayan",
+  "home": "Home",
   "home_screen_settings": "Mga setting ng home screen",
   "how_to_connect": "Paano kumonekta",
   "how_to_use": "Paano gamitin",
