--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -60,6 +60,7 @@
   "approve": "Затвердити",
   "approve_request": "Запитайте запит",
   "approve_tokens": "Затвердити токени",
+  "apps": "програми",
   "arbiscan_history": "Арбісканська історія",
   "arrive_in_this_address": "${currency} ${tag}надійде на цю адресу",
   "ascending": "Висхід",
@@ -438,6 +439,8 @@
   "hide": "Сховати",
   "hide_details": "Приховати деталі",
   "high_contrast_theme": "Тема високої контрастності",
+  "history": "історія",
+  "home": "додому",
   "home_screen_settings": "Налаштування головного екрана",
   "how_to_connect": "Як підключитися",
   "how_to_use": "Як використовувати",
