--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -60,6 +60,7 @@
   "approve": "ﻭﺮﮐ ﺭﻮﻈﻨﻣ",
   "approve_request": "درخواست کو منظور کریں",
   "approve_tokens": "ٹوکن کو منظور کریں",
+  "apps": "ایپس",
   "arbiscan_history": "اربیسکن تاریخ",
   "arrive_in_this_address": "${currency} ${tag}اس پتے پر پہنچے گا۔",
   "ascending": "چڑھنے",
@@ -438,6 +439,8 @@
   "hide": "چھپائیں",
   "hide_details": "تفصیلات چھپائیں۔",
   "high_contrast_theme": "ہائی کنٹراسٹ تھیم",
+  "history": "تاریخ",
+  "home": "گھر",
   "home_screen_settings": "ہوم اسکرین کی ترتیبات",
   "how_to_connect": "کیسے مربوط ہوں",
   "how_to_use": "                                                         ﮧﻘﯾﺮﻃ ﺎﮐ ﮯﻧﺮﮐ ﻝﺎﻤﻌﺘﺳﺍ",
