--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -60,6 +60,7 @@
   "approve": "批准",
   "approve_request": "批准请求",
   "approve_tokens": "批准令牌",
+  "apps": "应用程序",
   "arbiscan_history": "ArbiScan 历史",
   "arrive_in_this_address": "${currency} ${tag}将到达此地址",
   "ascending": "上升",
@@ -438,6 +439,8 @@
   "hide": "隐藏",
   "hide_details": "隐藏细节",
   "high_contrast_theme": "高对比度主题",
+  "history": "历史",
+  "home": "家",
   "home_screen_settings": "主屏幕设置",
   "how_to_connect": "如何连接",
   "how_to_use": "如何使用",
